# network-programming-project-20222

./: .gitignore  README.md  todo
Design/: message-structure.txt
Design/class-diagram/: class_diagram  client-class-diagram.asta  server_class_diagram
Design/database/: database-schema
Design/use-case-diagram/: Main UseCase.asta
GUI/Client/: Client.cpp  Client.h  Client.pro  Controller.cpp  Controller.h  Message.cpp  Message.h  Utils.cpp  Utils.h  Views.cpp  Views.h  chatIcon.qrc  chatwindow.cpp  chatwindow.h  chatwindow.ui  clientwindow.cpp  clientwindow.h  clientwindow.ui  common.h  groupwindow.cpp  groupwindow.h  groupwindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp
GUI/Server/: AnonymousChatRoom.cpp  AnonymousChatRoom.h  Message.cpp  Message.h  SQLQuery.cpp  SQLQuery.h  Server.cpp  Server.h  Server.pro  User.cpp  User.h  Utils.cpp  Utils.h  common.h  main.cpp  serverwindow.cpp  serverwindow.h
client/: client.cpp
messaging-app/client/: CMakeLists.txt
messaging-app/client/include/: Client.h  Message.h  Utils.h  client.h  messagebuffer.h
messaging-app/client/src/: Client.cpp  Message.cpp  Utils.cpp  client.cpp  main.cpp  messagebuffer.cpp
messaging-app/server/: CMakeLists.txt
messaging-app/server/config/: config.txt  messaging_db.sql
messaging-app/server/include/: AnonymousChatRoom.h  Message.h  SQLQuery.h  Server.h  User.h  Utils.h  messagebuffer.h  server.h
messaging-app/server/src/: AnonymousChatRoom.cpp  Message.cpp  SQLQuery.cpp  Server.cpp  User.cpp  Utils.cpp  main.cpp  messagebuffer.cpp  server.cpp
server/: server.cpp
(+21 files in other folders)
